--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -33,7 +33,7 @@ bindsym $mod+Return exec ~/scripts/urxvt
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run -i -p ">" -l 15 -fn ohsnap:size=15 -q -t -nb \#151515 -nf \#f5f5f5 -sb \#6a9fb5 -w 350
+bindsym $mod+d exec ~/scripts/rofi-run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
