--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -198,7 +198,7 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
 bindsym XF86AudioLowerVolume exec --no-startup-id mpc volume -10
 bindsym XF86AudioRaiseVolume exec --no-startup-id mpc volume +10
 
-bindsym $mod+Shift+numbersign exec --no-startup-id bash ~/scripts/dmenu_mpd
+bindsym $mod+Shift+numbersign exec --no-startup-id python ~/scripts/dmenu_mpd
 
 
 assign [class="^Firefox$"] → $1
