--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -33,7 +33,7 @@ bindsym $mod+Return exec ~/scripts/urxvt
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec ~/scripts/rofi-run
+bindsym $mod+d exec rofi -show run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
