Invert compton blur match
Before: Exclude things that aren't rofi

After: Exclude things that ARE URxvt

--- a/compton/.config/compton.conf
+++ b/compton/.config/compton.conf
@@ -2,4 +2,4 @@ vsync="opengl-swc";
 backend="glx";
 blur-background=true;
 blur-kern="11x11gaussian";
-blur-background-exclude="!name = 'rofi'";
+blur-background-exclude="class_g = 'URxvt'";
