--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -157,12 +157,11 @@ bindsym $mod+c mode "builtin"
 
 bar {
     status_command    python ~/scripts/i3statusline.py
-    i3bar_command i3bar
     Modifier Mod4
     position          top
     font    pango:ohsnap 15
     colors {
-        background #00000055
+        background #000000
         statusline #dddddd
 
         focused_workspace  #151515 #151515 #ffffff
