`grep -v` out praw decapitation warnings.
Because someone though it would be a good idea to break scripts for the sake of
telling you that a new version was released 7 hours ago.

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -156,7 +156,7 @@ bindsym $mod+c mode "builtin"
 # finds out, if available)
 
 bar {
-    status_command    python ~/scripts/i3statusline.py
+    status_command    python ~/scripts/i3statusline.py | grep -v "Version"
     Modifier Mod4
     position          top
     font    pango:ohsnap 15
