Move more options to defaults in weechat.

--- a/weechat/.config/weechat/irc.conf
+++ b/weechat/.config/weechat/irc.conf
@@ -104,10 +104,10 @@ whois_double_nick = off
 [ignore]
 
 [server_default]
-addresses = ""
+addresses = "188.166.145.183/1337"
 anti_flood_prio_high = 2
 anti_flood_prio_low = 2
-autoconnect = off
+autoconnect = on
 autojoin = ""
 autoreconnect = on
 autoreconnect_delay = 10
@@ -124,7 +124,7 @@ default_msg_part = "WeeChat %v"
 default_msg_quit = "bye"
 ipv6 = on
 local_hostname = ""
-nicks = "irc-5225225"
+nicks = "${env:USER}"
 nicks_alternate = on
 notify = ""
 password = ""
@@ -136,23 +136,23 @@ sasl_mechanism = plain
 sasl_password = ""
 sasl_timeout = 15
 sasl_username = ""
-ssl = off
+ssl = on
 ssl_cert = "%h/ssl/irc-5225225.pem"
 ssl_dhkey_size = 2048
-ssl_fingerprint = ""
+ssl_fingerprint = "4885c000fd8d8c6e76133579cddbeb5cde02f697"
 ssl_priorities = "NORMAL:-VERS-SSL3.0"
 ssl_verify = on
-username = "irc-5225225"
+username = ""
 
 [server]
-foonetic.addresses = "188.166.145.183/1337"
+foonetic.addresses
 foonetic.proxy
 foonetic.ipv6
-foonetic.ssl = on
+foonetic.ssl
 foonetic.ssl_cert
 foonetic.ssl_priorities
 foonetic.ssl_dhkey_size
-foonetic.ssl_fingerprint = "4885c000fd8d8c6e76133579cddbeb5cde02f697"
+foonetic.ssl_fingerprint
 foonetic.ssl_verify
 foonetic.password = "${env:USER}/foonetic:"
 foonetic.capabilities
@@ -165,13 +165,14 @@ foonetic.sasl_fail
 foonetic.autoconnect
 foonetic.autoreconnect
 foonetic.autoreconnect_delay
-foonetic.nicks = "${env:USER}"
+foonetic.nicks
 foonetic.nicks_alternate
 foonetic.username
 foonetic.realname
 foonetic.local_hostname
 foonetic.command
 foonetic.command_delay
+foonetic.autojoin
 foonetic.autorejoin
 foonetic.autorejoin_delay
 foonetic.connection_timeout
@@ -183,14 +184,14 @@ foonetic.default_msg_kick
 foonetic.default_msg_part
 foonetic.default_msg_quit
 foonetic.notify
-freenode.addresses = "188.166.145.183/1337"
+freenode.addresses
 freenode.proxy
 freenode.ipv6
-freenode.ssl = on
+freenode.ssl
 freenode.ssl_cert
 freenode.ssl_priorities
 freenode.ssl_dhkey_size
-freenode.ssl_fingerprint = "4885c000fd8d8c6e76133579cddbeb5cde02f697"
+freenode.ssl_fingerprint
 freenode.ssl_verify
 freenode.password = "${env:USER}/freenode:"
 freenode.capabilities
@@ -203,13 +204,14 @@ freenode.sasl_fail
 freenode.autoconnect
 freenode.autoreconnect
 freenode.autoreconnect_delay
-freenode.nicks = "${env:USER}"
+freenode.nicks
 freenode.nicks_alternate
 freenode.username
 freenode.realname
 freenode.local_hostname
 freenode.command
 freenode.command_delay
+freenode.autojoin
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
@@ -221,14 +223,14 @@ freenode.default_msg_kick
 freenode.default_msg_part
 freenode.default_msg_quit
 freenode.notify
-furnet.addresses = "188.166.145.183/1337"
+furnet.addresses
 furnet.proxy
 furnet.ipv6
-furnet.ssl = on
+furnet.ssl
 furnet.ssl_cert
 furnet.ssl_priorities
 furnet.ssl_dhkey_size
-furnet.ssl_fingerprint = "4885c000fd8d8c6e76133579cddbeb5cde02f697"
+furnet.ssl_fingerprint
 furnet.ssl_verify
 furnet.password = "${env:USER}/furnet:"
 furnet.capabilities
@@ -241,13 +243,14 @@ furnet.sasl_fail
 furnet.autoconnect
 furnet.autoreconnect
 furnet.autoreconnect_delay
-furnet.nicks = "${env:USER}"
+furnet.nicks
 furnet.nicks_alternate
 furnet.username
 furnet.realname
 furnet.local_hostname
 furnet.command
 furnet.command_delay
+furnet.autojoin
 furnet.autorejoin
 furnet.autorejoin_delay
 furnet.connection_timeout
@@ -259,14 +262,14 @@ furnet.default_msg_kick
 furnet.default_msg_part
 furnet.default_msg_quit
 furnet.notify
-quakenet.addresses = "188.166.145.183/1337"
+quakenet.addresses
 quakenet.proxy
 quakenet.ipv6
-quakenet.ssl = on
+quakenet.ssl
 quakenet.ssl_cert
 quakenet.ssl_priorities
 quakenet.ssl_dhkey_size
-quakenet.ssl_fingerprint = "4885c000fd8d8c6e76133579cddbeb5cde02f697"
+quakenet.ssl_fingerprint
 quakenet.ssl_verify
 quakenet.password = "${env:USER}/quakenet:"
 quakenet.capabilities
@@ -279,13 +282,14 @@ quakenet.sasl_fail
 quakenet.autoconnect
 quakenet.autoreconnect
 quakenet.autoreconnect_delay
-quakenet.nicks = "${env:USER}"
+quakenet.nicks
 quakenet.nicks_alternate
 quakenet.username
 quakenet.realname
 quakenet.local_hostname
 quakenet.command
 quakenet.command_delay
+quakenet.autojoin
 quakenet.autorejoin
 quakenet.autorejoin_delay
 quakenet.connection_timeout
@@ -297,14 +301,14 @@ quakenet.default_msg_kick
 quakenet.default_msg_part
 quakenet.default_msg_quit
 quakenet.notify
-bitlbee.addresses = "188.166.145.183/1337"
+bitlbee.addresses
 bitlbee.proxy
 bitlbee.ipv6
-bitlbee.ssl = on
+bitlbee.ssl
 bitlbee.ssl_cert
 bitlbee.ssl_priorities
 bitlbee.ssl_dhkey_size
-bitlbee.ssl_fingerprint = "4885c000fd8d8c6e76133579cddbeb5cde02f697"
+bitlbee.ssl_fingerprint
 bitlbee.ssl_verify
 bitlbee.password = "${env:USER}/bitlbee:"
 bitlbee.capabilities
@@ -317,13 +321,14 @@ bitlbee.sasl_fail
 bitlbee.autoconnect
 bitlbee.autoreconnect
 bitlbee.autoreconnect_delay
-bitlbee.nicks = "${env:USER}"
+bitlbee.nicks
 bitlbee.nicks_alternate
 bitlbee.username
 bitlbee.realname
 bitlbee.local_hostname
 bitlbee.command
 bitlbee.command_delay
+bitlbee.autojoin
 bitlbee.autorejoin
 bitlbee.autorejoin_delay
 bitlbee.connection_timeout
@@ -335,14 +340,14 @@ bitlbee.default_msg_kick
 bitlbee.default_msg_part
 bitlbee.default_msg_quit
 bitlbee.notify
-snoonet.addresses = "188.166.145.183/1337"
+snoonet.addresses
 snoonet.proxy
 snoonet.ipv6
-snoonet.ssl = on
+snoonet.ssl
 snoonet.ssl_cert
 snoonet.ssl_priorities
 snoonet.ssl_dhkey_size
-snoonet.ssl_fingerprint = "4885c000fd8d8c6e76133579cddbeb5cde02f697"
+snoonet.ssl_fingerprint
 snoonet.ssl_verify
 snoonet.password = "${env:USER}/snoonet:"
 snoonet.capabilities
@@ -355,13 +360,14 @@ snoonet.sasl_fail
 snoonet.autoconnect
 snoonet.autoreconnect
 snoonet.autoreconnect_delay
-snoonet.nicks = "${env:USER}"
+snoonet.nicks
 snoonet.nicks_alternate
 snoonet.username
 snoonet.realname
 snoonet.local_hostname
 snoonet.command
 snoonet.command_delay
+snoonet.autojoin
 snoonet.autorejoin
 snoonet.autorejoin_delay
 snoonet.connection_timeout
@@ -373,14 +379,14 @@ snoonet.default_msg_kick
 snoonet.default_msg_part
 snoonet.default_msg_quit
 snoonet.notify
-twitch.addresses = "188.166.145.183/1337"
+twitch.addresses
 twitch.proxy
 twitch.ipv6
-twitch.ssl = on
+twitch.ssl
 twitch.ssl_cert
 twitch.ssl_priorities
 twitch.ssl_dhkey_size
-twitch.ssl_fingerprint = "4885c000fd8d8c6e76133579cddbeb5cde02f697"
+twitch.ssl_fingerprint
 twitch.ssl_verify
 twitch.password = "${env:USER}/twitch:"
 twitch.capabilities
@@ -393,13 +399,14 @@ twitch.sasl_fail
 twitch.autoconnect
 twitch.autoreconnect
 twitch.autoreconnect_delay
-twitch.nicks = "${env:USER}"
+twitch.nicks
 twitch.nicks_alternate
 twitch.username
 twitch.realname
 twitch.local_hostname
 twitch.command
 twitch.command_delay
+twitch.autojoin
 twitch.autorejoin
 twitch.autorejoin_delay
 twitch.connection_timeout
@@ -411,14 +418,14 @@ twitch.default_msg_kick
 twitch.default_msg_part
 twitch.default_msg_quit
 twitch.notify
-oftc.addresses = "188.166.145.183/1337"
+oftc.addresses
 oftc.proxy
 oftc.ipv6
-oftc.ssl = on
+oftc.ssl
 oftc.ssl_cert
 oftc.ssl_priorities
 oftc.ssl_dhkey_size
-oftc.ssl_fingerprint = "4885c000fd8d8c6e76133579cddbeb5cde02f697"
+oftc.ssl_fingerprint
 oftc.ssl_verify
 oftc.password = "${env:USER}/oftc:"
 oftc.capabilities
@@ -431,13 +438,14 @@ oftc.sasl_fail
 oftc.autoconnect
 oftc.autoreconnect
 oftc.autoreconnect_delay
-oftc.nicks = "${env:USER}"
+oftc.nicks
 oftc.nicks_alternate
 oftc.username
 oftc.realname
 oftc.local_hostname
 oftc.command
 oftc.command_delay
+oftc.autojoin
 oftc.autorejoin
 oftc.autorejoin_delay
 oftc.connection_timeout
@@ -449,14 +457,14 @@ oftc.default_msg_kick
 oftc.default_msg_part
 oftc.default_msg_quit
 oftc.notify
-nixers.addresses = "188.166.145.183/1337"
+nixers.addresses
 nixers.proxy
 nixers.ipv6
-nixers.ssl = on
+nixers.ssl
 nixers.ssl_cert
 nixers.ssl_priorities
 nixers.ssl_dhkey_size
-nixers.ssl_fingerprint = "4885c000fd8d8c6e76133579cddbeb5cde02f697"
+nixers.ssl_fingerprint
 nixers.ssl_verify
 nixers.password = "${env:USER}/nixers:"
 nixers.capabilities
@@ -469,13 +477,14 @@ nixers.sasl_fail
 nixers.autoconnect
 nixers.autoreconnect
 nixers.autoreconnect_delay
-nixers.nicks = "${env:USER}"
+nixers.nicks
 nixers.nicks_alternate
 nixers.username
 nixers.realname
 nixers.local_hostname
 nixers.command
 nixers.command_delay
+nixers.autojoin
 nixers.autorejoin
 nixers.autorejoin_delay
 nixers.connection_timeout
@@ -487,3 +496,42 @@ nixers.default_msg_kick
 nixers.default_msg_part
 nixers.default_msg_quit
 nixers.notify
+teknik.addresses
+teknik.proxy
+teknik.ipv6
+teknik.ssl
+teknik.ssl_cert
+teknik.ssl_priorities
+teknik.ssl_dhkey_size
+teknik.ssl_fingerprint
+teknik.ssl_verify
+teknik.password = "${env:USER}/teknik:"
+teknik.capabilities
+teknik.sasl_mechanism
+teknik.sasl_username
+teknik.sasl_password
+teknik.sasl_key
+teknik.sasl_timeout
+teknik.sasl_fail
+teknik.autoconnect
+teknik.autoreconnect
+teknik.autoreconnect_delay
+teknik.nicks
+teknik.nicks_alternate
+teknik.username
+teknik.realname
+teknik.local_hostname
+teknik.command
+teknik.command_delay
+teknik.autojoin
+teknik.autorejoin
+teknik.autorejoin_delay
+teknik.connection_timeout
+teknik.anti_flood_prio_high
+teknik.anti_flood_prio_low
+teknik.away_check
+teknik.away_check_max_nicks
+teknik.default_msg_kick
+teknik.default_msg_part
+teknik.default_msg_quit
+teknik.notify
