--- a/weechat/.config/weechat/weechat.conf
+++ b/weechat/.config/weechat/weechat.conf
@@ -106,7 +106,7 @@ quote_time_format = "%H:%M:%S"
 read_marker = none
 read_marker_always_show = off
 read_marker_string = "─"
-save_config_on_exit = on
+save_config_on_exit = off
 save_layout_on_exit = none
 scroll_amount = 3
 scroll_bottom_after_switch = off
