Ignore qutebrowser commit bot.

--- a/weechat/.config/weechat/irc.conf
+++ b/weechat/.config/weechat/irc.conf
@@ -102,6 +102,7 @@ whois_double_nick = off
 [ctcp]
 
 [ignore]
+ignore = freenode;#qutebrowser;^qutebrowser-gh$
 
 [server_default]
 addresses = "188.166.145.183/1337"
