Add notify_send.py script

--- a/weechat/.config/weechat/plugins.conf
+++ b/weechat/.config/weechat/plugins.conf
@@ -52,6 +52,20 @@ python.minesweeper.color_mine_bg = "97"
 python.minesweeper.color_square_bg = "239"
 python.minesweeper.utf8 = "on"
 python.minesweeper.zoom = ""
+python.notify_send.ellipsis = "[..]"
+python.notify_send.escape_html = "on"
+python.notify_send.icon = ""
+python.notify_send.ignore_nicks = ""
+python.notify_send.ignore_nicks_starting_with = ""
+python.notify_send.max_length = "72"
+python.notify_send.min_notification_delay = "500"
+python.notify_send.nick_separator = ": "
+python.notify_send.notify_for_current_buffer = "on"
+python.notify_send.notify_on_highlights = "on"
+python.notify_send.notify_on_privmsgs = "on"
+python.notify_send.notify_when_away = "on"
+python.notify_send.timeout = "5000"
+python.notify_send.urgency = "normal"
 ruby.check_license = "off"
 tcl.check_license = "off"
 
@@ -99,3 +113,17 @@ python.minesweeper.color_mine_bg = "color for mine (background) (default: "97")"
 python.minesweeper.color_square_bg = "color for square (background) (default: "239")"
 python.minesweeper.utf8 = "use utf-8 chars to draw grid and flags (your terminal/font must support these chars) (default: "on")"
 python.minesweeper.zoom = "zoom for board: 0 or 1 (size of squares: 0 = 4x2, 1 = 6x3 (better), empty means automatic zoom according to size of window) (default: "")"
+python.notify_send.ellipsis = "Ellipsis to be used for notifications that are too long."
+python.notify_send.escape_html = "Escapes the '<', '>', and '&' characters in notification messages."
+python.notify_send.icon = "Path to an icon to be shown in notifications."
+python.notify_send.ignore_nicks = "A comma-separated list of nicks from which no notifications should be shown."
+python.notify_send.ignore_nicks_starting_with = "A comma-separated list of nick prefixes from which no notifications should be shown."
+python.notify_send.max_length = "Maximal length of a notification (0 means no limit)."
+python.notify_send.min_notification_delay = "A minimal delay between successive notifications from the same buffer (in milliseconds; set to 0 to show all notifications)."
+python.notify_send.nick_separator = "A separator between a nick and a message."
+python.notify_send.notify_for_current_buffer = "Send also notifications for the currently active buffer."
+python.notify_send.notify_on_highlights = "Send notifications on highlights."
+python.notify_send.notify_on_privmsgs = "Send notifications on private messages."
+python.notify_send.notify_when_away = "Send also notifications when away."
+python.notify_send.timeout = "Time after which the notification disappears (in milliseconds; set to 0 to disable)."
+python.notify_send.urgency = "Urgency (low, normal, critical)."
