--- a/weechat/.config/weechat/buffers.conf
+++ b/weechat/.config/weechat/buffers.conf
@@ -4,21 +4,21 @@
 
 [color]
 current_bg = default
-current_fg = lightred
+current_fg = *red
 default_bg = default
-default_fg = white
+default_fg = default
 hotlist_highlight_bg = default
-hotlist_highlight_fg = magenta
+hotlist_highlight_fg = !red
 hotlist_low_bg = default
 hotlist_low_fg = default
 hotlist_message_bg = default
-hotlist_message_fg = white
+hotlist_message_fg = default
 hotlist_private_bg = default
-hotlist_private_fg = magenta
+hotlist_private_fg = !red
 none_channel_bg = default
-none_channel_fg = cyan
-number = lightgreen
-number_char = lightgreen
+none_channel_fg = *blue
+number = *8
+number_char = default
 prefix_bufname = default
 queries_default_bg = default
 queries_default_fg = default
