--- a/weechat/.config/weechat/irc.conf
+++ b/weechat/.config/weechat/irc.conf
@@ -76,7 +76,7 @@ mirc_remap = "1,-1:darkgray"
 nick_prefixes = "q:lightred;a:lightcyan;o:lightgreen;h:lightmagenta;v:yellow;*:lightblue"
 notice = green
 reason_quit = default
-topic_current = lightgreen
+topic_current = darkgray
 topic_new = green
 topic_old = red
 
