Some changes (weechat config)

--- a/weechat/.config/weechat/buffers.conf
+++ b/weechat/.config/weechat/buffers.conf
@@ -16,8 +16,8 @@ hotlist_message_fg = default
 hotlist_private_bg = default
 hotlist_private_fg = !red
 none_channel_bg = default
-none_channel_fg = *blue
-number = *8
+none_channel_fg = cyan
+number = *black
 number_char = default
 prefix_bufname = default
 queries_default_bg = default
