--- a/weechat/.config/weechat/irc.conf
+++ b/weechat/.config/weechat/irc.conf
@@ -85,8 +85,8 @@ autoreconnect_delay_growing = 2
 autoreconnect_delay_max = 600
 ban_mask_default = "*!$ident@$host"
 channel_encode = off
-colors_receive = on
-colors_send = on
+colors_receive = off
+colors_send = off
 lag_check = 60
 lag_max = 600
 lag_min_show = 1500
