--- a/weechat/.config/weechat/weechat.conf
+++ b/weechat/.config/weechat/weechat.conf
@@ -279,7 +279,7 @@ nicklist.hidden = off
 nicklist.items = "buffer_nicklist"
 nicklist.position = right
 nicklist.priority = 200
-nicklist.separator = on
+nicklist.separator = off
 nicklist.size = 0
 nicklist.size_max = 0
 nicklist.type = window
