Weechat: Do some things.

--- a/weechat/.config/weechat/irc.conf
+++ b/weechat/.config/weechat/irc.conf
@@ -27,7 +27,6 @@ highlight_channel = "$nick"
 highlight_pv = "$nick"
 highlight_server = "$nick"
 highlight_tags_restrict = "irc_privmsg,irc_notice"
-item_away_message = on
 item_channel_modes_hide_args = "k"
 item_display_server = buffer_plugin
 item_nick_modes = on
@@ -36,9 +35,6 @@ join_auto_add_chantype = off
 msgbuffer_fallback = current
 new_channel_position = none
 new_pv_position = none
-nick_color_force = ""
-nick_color_hash = djb2
-nick_color_stop_chars = "_|["
 nick_completion_smart = speakers
 nick_mode = prefix
 nick_mode_empty = off
@@ -65,7 +61,6 @@ topic_strip_colors = on
 
 [color]
 input_nick = lightcyan
-item_away = yellow
 item_channel_modes = default
 item_lag_counting = default
 item_lag_finished = yellow
@@ -94,6 +89,7 @@ lag_reconnect = 120
 lag_refresh_interval = 1
 notify_check_ison = 1
 notify_check_whois = 5
+sasl_fail_unavailable = on
 send_unknown_commands = on
 whois_double_nick = off
 
@@ -173,7 +169,7 @@ foonetic.realname
 foonetic.local_hostname
 foonetic.command
 foonetic.command_delay
-foonetic.autojoin
+foonetic.autojoin = ""
 foonetic.autorejoin
 foonetic.autorejoin_delay
 foonetic.connection_timeout
@@ -212,7 +208,7 @@ freenode.realname
 freenode.local_hostname
 freenode.command
 freenode.command_delay
-freenode.autojoin
+freenode.autojoin = ""
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
@@ -251,7 +247,7 @@ furnet.realname
 furnet.local_hostname
 furnet.command
 furnet.command_delay
-furnet.autojoin
+furnet.autojoin = ""
 furnet.autorejoin
 furnet.autorejoin_delay
 furnet.connection_timeout
@@ -290,7 +286,7 @@ quakenet.realname
 quakenet.local_hostname
 quakenet.command
 quakenet.command_delay
-quakenet.autojoin
+quakenet.autojoin = ""
 quakenet.autorejoin
 quakenet.autorejoin_delay
 quakenet.connection_timeout
@@ -329,7 +325,7 @@ bitlbee.realname
 bitlbee.local_hostname
 bitlbee.command
 bitlbee.command_delay
-bitlbee.autojoin
+bitlbee.autojoin = ""
 bitlbee.autorejoin
 bitlbee.autorejoin_delay
 bitlbee.connection_timeout
@@ -368,7 +364,7 @@ snoonet.realname
 snoonet.local_hostname
 snoonet.command
 snoonet.command_delay
-snoonet.autojoin
+snoonet.autojoin = ""
 snoonet.autorejoin
 snoonet.autorejoin_delay
 snoonet.connection_timeout
@@ -407,7 +403,7 @@ twitch.realname
 twitch.local_hostname
 twitch.command
 twitch.command_delay
-twitch.autojoin
+twitch.autojoin = ""
 twitch.autorejoin
 twitch.autorejoin_delay
 twitch.connection_timeout
@@ -419,45 +415,6 @@ twitch.default_msg_kick
 twitch.default_msg_part
 twitch.default_msg_quit
 twitch.notify
-oftc.addresses
-oftc.proxy
-oftc.ipv6
-oftc.ssl
-oftc.ssl_cert
-oftc.ssl_priorities
-oftc.ssl_dhkey_size
-oftc.ssl_fingerprint
-oftc.ssl_verify
-oftc.password = "${env:USER}/oftc:"
-oftc.capabilities
-oftc.sasl_mechanism
-oftc.sasl_username
-oftc.sasl_password
-oftc.sasl_key
-oftc.sasl_timeout
-oftc.sasl_fail
-oftc.autoconnect
-oftc.autoreconnect
-oftc.autoreconnect_delay
-oftc.nicks
-oftc.nicks_alternate
-oftc.username
-oftc.realname
-oftc.local_hostname
-oftc.command
-oftc.command_delay
-oftc.autojoin
-oftc.autorejoin
-oftc.autorejoin_delay
-oftc.connection_timeout
-oftc.anti_flood_prio_high
-oftc.anti_flood_prio_low
-oftc.away_check
-oftc.away_check_max_nicks
-oftc.default_msg_kick
-oftc.default_msg_part
-oftc.default_msg_quit
-oftc.notify
 nixers.addresses
 nixers.proxy
 nixers.ipv6
@@ -485,7 +442,7 @@ nixers.realname
 nixers.local_hostname
 nixers.command
 nixers.command_delay
-nixers.autojoin
+nixers.autojoin = ""
 nixers.autorejoin
 nixers.autorejoin_delay
 nixers.connection_timeout
@@ -497,42 +454,3 @@ nixers.default_msg_kick
 nixers.default_msg_part
 nixers.default_msg_quit
 nixers.notify
-teknik.addresses
-teknik.proxy
-teknik.ipv6
-teknik.ssl
-teknik.ssl_cert
-teknik.ssl_priorities
-teknik.ssl_dhkey_size
-teknik.ssl_fingerprint
-teknik.ssl_verify
-teknik.password = "${env:USER}/teknik:"
-teknik.capabilities
-teknik.sasl_mechanism
-teknik.sasl_username
-teknik.sasl_password
-teknik.sasl_key
-teknik.sasl_timeout
-teknik.sasl_fail
-teknik.autoconnect
-teknik.autoreconnect
-teknik.autoreconnect_delay
-teknik.nicks
-teknik.nicks_alternate
-teknik.username
-teknik.realname
-teknik.local_hostname
-teknik.command
-teknik.command_delay
-teknik.autojoin
-teknik.autorejoin
-teknik.autorejoin_delay
-teknik.connection_timeout
-teknik.anti_flood_prio_high
-teknik.anti_flood_prio_low
-teknik.away_check
-teknik.away_check_max_nicks
-teknik.default_msg_kick
-teknik.default_msg_part
-teknik.default_msg_quit
-teknik.notify
