Use direct IRC connections instead of ZNC.

--- a/weechat/.config/weechat/irc.conf
+++ b/weechat/.config/weechat/irc.conf
@@ -102,9 +102,10 @@ whowas = current
 
 [ignore]
 ignore = freenode;#qutebrowser;^qutebrowser-gh$
+ignore = *;*;^SubWatch$
 
 [server_default]
-addresses = "188.166.145.183/1337"
+addresses = ""
 anti_flood_prio_high = 2
 anti_flood_prio_low = 2
 autoconnect = on
@@ -124,7 +125,7 @@ default_msg_part = "WeeChat %v"
 default_msg_quit = "bye"
 ipv6 = on
 local_hostname = ""
-nicks = "${env:USER}"
+nicks = "irc-5225225"
 nicks_alternate = on
 notify = ""
 password = ""
@@ -139,13 +140,13 @@ sasl_username = ""
 ssl = on
 ssl_cert = "%h/ssl/irc-5225225.pem"
 ssl_dhkey_size = 2048
-ssl_fingerprint = "4885c000fd8d8c6e76133579cddbeb5cde02f697"
+ssl_fingerprint = ""
 ssl_priorities = "NORMAL:-VERS-SSL3.0"
 ssl_verify = on
 username = ""
 
 [server]
-foonetic.addresses
+foonetic.addresses = "anchor.foonetic.net/6697,staticfree.foonetic.net/6697"
 foonetic.proxy
 foonetic.ipv6
 foonetic.ssl
@@ -153,8 +154,8 @@ foonetic.ssl_cert
 foonetic.ssl_priorities
 foonetic.ssl_dhkey_size
 foonetic.ssl_fingerprint
-foonetic.ssl_verify
-foonetic.password = "${env:USER}/foonetic:"
+foonetic.ssl_verify = off
+foonetic.password = "${sec.data.foonetic}"
 foonetic.capabilities
 foonetic.sasl_mechanism
 foonetic.sasl_username
@@ -184,7 +185,7 @@ foonetic.default_msg_kick
 foonetic.default_msg_part
 foonetic.default_msg_quit
 foonetic.notify
-freenode.addresses
+freenode.addresses = "chat.freenode.net/6697"
 freenode.proxy
 freenode.ipv6
 freenode.ssl
@@ -193,7 +194,7 @@ freenode.ssl_priorities
 freenode.ssl_dhkey_size
 freenode.ssl_fingerprint
 freenode.ssl_verify
-freenode.password = "${env:USER}/freenode:"
+freenode.password
 freenode.capabilities
 freenode.sasl_mechanism
 freenode.sasl_username
@@ -223,16 +224,16 @@ freenode.default_msg_kick
 freenode.default_msg_part
 freenode.default_msg_quit
 freenode.notify
-furnet.addresses
+furnet.addresses = "lynx.furnet.org/6697"
 furnet.proxy
 furnet.ipv6
 furnet.ssl
 furnet.ssl_cert
 furnet.ssl_priorities
 furnet.ssl_dhkey_size
-furnet.ssl_fingerprint
+furnet.ssl_fingerprint = "4bd7170f6af79faa35d89734f54a0f601670e51e"
 furnet.ssl_verify
-furnet.password = "${env:USER}/furnet:"
+furnet.password = "${sec.data.furnet}"
 furnet.capabilities
 furnet.sasl_mechanism
 furnet.sasl_username
@@ -262,16 +263,16 @@ furnet.default_msg_kick
 furnet.default_msg_part
 furnet.default_msg_quit
 furnet.notify
-quakenet.addresses
+quakenet.addresses = "euroserv.fr.quakenet.org"
 quakenet.proxy
 quakenet.ipv6
-quakenet.ssl
+quakenet.ssl = off
 quakenet.ssl_cert
 quakenet.ssl_priorities
 quakenet.ssl_dhkey_size
 quakenet.ssl_fingerprint
 quakenet.ssl_verify
-quakenet.password = "${env:USER}/quakenet:"
+quakenet.password
 quakenet.capabilities
 quakenet.sasl_mechanism
 quakenet.sasl_username
@@ -287,8 +288,8 @@ quakenet.nicks_alternate
 quakenet.username
 quakenet.realname
 quakenet.local_hostname
-quakenet.command
-quakenet.command_delay
+quakenet.command = "/challengeauth irc-5225225 ${sec.data.quakenet}"
+quakenet.command_delay = 5
 quakenet.autojoin = ""
 quakenet.autorejoin
 quakenet.autorejoin_delay
@@ -301,46 +302,7 @@ quakenet.default_msg_kick
 quakenet.default_msg_part
 quakenet.default_msg_quit
 quakenet.notify
-bitlbee.addresses
-bitlbee.proxy
-bitlbee.ipv6
-bitlbee.ssl
-bitlbee.ssl_cert
-bitlbee.ssl_priorities
-bitlbee.ssl_dhkey_size
-bitlbee.ssl_fingerprint
-bitlbee.ssl_verify
-bitlbee.password = "${env:USER}/bitlbee:"
-bitlbee.capabilities
-bitlbee.sasl_mechanism
-bitlbee.sasl_username
-bitlbee.sasl_password
-bitlbee.sasl_key
-bitlbee.sasl_timeout
-bitlbee.sasl_fail
-bitlbee.autoconnect
-bitlbee.autoreconnect
-bitlbee.autoreconnect_delay
-bitlbee.nicks
-bitlbee.nicks_alternate
-bitlbee.username
-bitlbee.realname
-bitlbee.local_hostname
-bitlbee.command
-bitlbee.command_delay
-bitlbee.autojoin = ""
-bitlbee.autorejoin
-bitlbee.autorejoin_delay
-bitlbee.connection_timeout
-bitlbee.anti_flood_prio_high
-bitlbee.anti_flood_prio_low
-bitlbee.away_check
-bitlbee.away_check_max_nicks
-bitlbee.default_msg_kick
-bitlbee.default_msg_part
-bitlbee.default_msg_quit
-bitlbee.notify
-snoonet.addresses
+snoonet.addresses = "eu-irc.snoonet.org/6697"
 snoonet.proxy
 snoonet.ipv6
 snoonet.ssl
@@ -349,11 +311,11 @@ snoonet.ssl_priorities
 snoonet.ssl_dhkey_size
 snoonet.ssl_fingerprint
 snoonet.ssl_verify
-snoonet.password = "${env:USER}/snoonet:"
+snoonet.password
 snoonet.capabilities
 snoonet.sasl_mechanism
 snoonet.sasl_username
-snoonet.sasl_password
+snoonet.sasl_password = "${sec.data.snoonet}"
 snoonet.sasl_key
 snoonet.sasl_timeout
 snoonet.sasl_fail
@@ -379,16 +341,16 @@ snoonet.default_msg_kick
 snoonet.default_msg_part
 snoonet.default_msg_quit
 snoonet.notify
-twitch.addresses
+twitch.addresses = "irc.chat.twitch.tv/6667"
 twitch.proxy
 twitch.ipv6
-twitch.ssl
+twitch.ssl = off
 twitch.ssl_cert
 twitch.ssl_priorities
 twitch.ssl_dhkey_size
 twitch.ssl_fingerprint
 twitch.ssl_verify
-twitch.password = "${env:USER}/twitch:"
+twitch.password
 twitch.capabilities
 twitch.sasl_mechanism
 twitch.sasl_username
@@ -418,7 +380,7 @@ twitch.default_msg_kick
 twitch.default_msg_part
 twitch.default_msg_quit
 twitch.notify
-nixers.addresses
+nixers.addresses = "irc.unix.chat/6697"
 nixers.proxy
 nixers.ipv6
 nixers.ssl
@@ -427,7 +389,7 @@ nixers.ssl_priorities
 nixers.ssl_dhkey_size
 nixers.ssl_fingerprint
 nixers.ssl_verify
-nixers.password = "${env:USER}/nixers:"
+nixers.password = "${sec.data.nixers}"
 nixers.capabilities
 nixers.sasl_mechanism
 nixers.sasl_username
