Update weechat config

--- a/weechat/.config/weechat/irc.conf
+++ b/weechat/.config/weechat/irc.conf
@@ -173,7 +173,7 @@ foonetic.realname
 foonetic.local_hostname
 foonetic.command
 foonetic.command_delay
-foonetic.autojoin = ""
+foonetic.autojoin = "#xkcd,#bucket,#bucketlog,#xkcd-tardis,#xkcd-signal,#xkcd-noise,#xkcd-minecraft,#xkcd-compsci"
 foonetic.autorejoin
 foonetic.autorejoin_delay
 foonetic.connection_timeout
@@ -212,7 +212,7 @@ freenode.realname
 freenode.local_hostname
 freenode.command
 freenode.command_delay
-freenode.autojoin = ""
+freenode.autojoin = "#archlinux,#android,#Cyanogenmod,#firefox,#freenode,#i3,#latex,##linux,#python,#qutebrowser,#vim,#weechat,#bash,#github,##security,#mutt,#gnupg,#archlinux-classroom,#android-root,#zeronet #android #cyanogenmod"
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
@@ -251,7 +251,7 @@ furnet.realname
 furnet.local_hostname
 furnet.command
 furnet.command_delay
-furnet.autojoin = ""
+furnet.autojoin = "#gamerfurs,#SoftPaws,#uk,#linux,#TechFurs"
 furnet.autorejoin
 furnet.autorejoin_delay
 furnet.connection_timeout
@@ -290,7 +290,7 @@ quakenet.realname
 quakenet.local_hostname
 quakenet.command = "/challengeauth irc-5225225 ${sec.data.quakenet}"
 quakenet.command_delay = 5
-quakenet.autojoin = ""
+quakenet.autojoin = "#Quakenet,#xonotic,#xonotic.pickup"
 quakenet.autorejoin
 quakenet.autorejoin_delay
 quakenet.connection_timeout
@@ -329,7 +329,7 @@ snoonet.realname
 snoonet.local_hostname
 snoonet.command
 snoonet.command_delay
-snoonet.autojoin = ""
+snoonet.autojoin = "#britishpolitics,#casualconversation,#linuxmasterrace,#programming,#reddit,#uk"
 snoonet.autorejoin
 snoonet.autorejoin_delay
 snoonet.connection_timeout
@@ -350,7 +350,7 @@ twitch.ssl_priorities
 twitch.ssl_dhkey_size
 twitch.ssl_fingerprint
 twitch.ssl_verify
-twitch.password
+twitch.password = "${sec.data.twitch}"
 twitch.capabilities
 twitch.sasl_mechanism
 twitch.sasl_username
@@ -361,14 +361,14 @@ twitch.sasl_fail
 twitch.autoconnect
 twitch.autoreconnect
 twitch.autoreconnect_delay
-twitch.nicks
+twitch.nicks = "5225225"
 twitch.nicks_alternate
 twitch.username
 twitch.realname
 twitch.local_hostname
 twitch.command
 twitch.command_delay
-twitch.autojoin = ""
+twitch.autojoin = "#nerdcubed"
 twitch.autorejoin
 twitch.autorejoin_delay
 twitch.connection_timeout
@@ -407,7 +407,7 @@ nixers.realname
 nixers.local_hostname
 nixers.command
 nixers.command_delay
-nixers.autojoin = ""
+nixers.autojoin = "#unix"
 nixers.autorejoin
 nixers.autorejoin_delay
 nixers.connection_timeout
@@ -419,3 +419,42 @@ nixers.default_msg_kick
 nixers.default_msg_part
 nixers.default_msg_quit
 nixers.notify
+bitlbee.addresses = "localhost"
+bitlbee.proxy
+bitlbee.ipv6
+bitlbee.ssl = off
+bitlbee.ssl_cert
+bitlbee.ssl_priorities
+bitlbee.ssl_dhkey_size
+bitlbee.ssl_fingerprint
+bitlbee.ssl_verify
+bitlbee.password
+bitlbee.capabilities
+bitlbee.sasl_mechanism
+bitlbee.sasl_username
+bitlbee.sasl_password
+bitlbee.sasl_key
+bitlbee.sasl_timeout
+bitlbee.sasl_fail
+bitlbee.autoconnect
+bitlbee.autoreconnect
+bitlbee.autoreconnect_delay
+bitlbee.nicks
+bitlbee.nicks_alternate
+bitlbee.username
+bitlbee.realname
+bitlbee.local_hostname
+bitlbee.command
+bitlbee.command_delay
+bitlbee.autojoin = "&bitlbee,#twitter_zamjnw5"
+bitlbee.autorejoin
+bitlbee.autorejoin_delay
+bitlbee.connection_timeout
+bitlbee.anti_flood_prio_high
+bitlbee.anti_flood_prio_low
+bitlbee.away_check
+bitlbee.away_check_max_nicks
+bitlbee.default_msg_kick
+bitlbee.default_msg_part
+bitlbee.default_msg_quit
+bitlbee.notify
