--- a/weechat/.config/weechat/plugins.conf
+++ b/weechat/.config/weechat/plugins.conf
@@ -25,6 +25,38 @@ perl.beep.whitelist_channels = ""
 perl.beep.whitelist_nicks = ""
 perl.check_license = "off"
 perl.mass_hl_blocker.limit = "5"
+perl.nickregain.bitlbee_command = ""
+perl.nickregain.bitlbee_command_delay = "0"
+perl.nickregain.bitlbee_delay = "60"
+perl.nickregain.bitlbee_enabled = "off"
+perl.nickregain.foonetic_command = ""
+perl.nickregain.foonetic_command_delay = "0"
+perl.nickregain.foonetic_delay = "60"
+perl.nickregain.foonetic_enabled = "on"
+perl.nickregain.freenode_command = ""
+perl.nickregain.freenode_command_delay = "0"
+perl.nickregain.freenode_delay = "60"
+perl.nickregain.freenode_enabled = "on"
+perl.nickregain.furnet_command = ""
+perl.nickregain.furnet_command_delay = "0"
+perl.nickregain.furnet_delay = "60"
+perl.nickregain.furnet_enabled = "on"
+perl.nickregain.nixers_command = ""
+perl.nickregain.nixers_command_delay = "0"
+perl.nickregain.nixers_delay = "60"
+perl.nickregain.nixers_enabled = "on"
+perl.nickregain.quakenet_command = ""
+perl.nickregain.quakenet_command_delay = "0"
+perl.nickregain.quakenet_delay = "60"
+perl.nickregain.quakenet_enabled = "on"
+perl.nickregain.snoonet_command = ""
+perl.nickregain.snoonet_command_delay = "0"
+perl.nickregain.snoonet_delay = "60"
+perl.nickregain.snoonet_enabled = "on"
+perl.nickregain.twitch_command = ""
+perl.nickregain.twitch_command_delay = "0"
+perl.nickregain.twitch_delay = "60"
+perl.nickregain.twitch_enabled = "off"
 python.apply_corrections.check_every = "5"
 python.apply_corrections.data_timeout = "60"
 python.apply_corrections.message_limit = "2"
@@ -55,6 +87,8 @@ python.minesweeper.zoom = ""
 python.notify_send.ellipsis = "[..]"
 python.notify_send.escape_html = "on"
 python.notify_send.icon = ""
+python.notify_send.ignore_buffers = ""
+python.notify_send.ignore_buffers_starting_with = ""
 python.notify_send.ignore_nicks = ""
 python.notify_send.ignore_nicks_starting_with = ""
 python.notify_send.max_length = "72"
@@ -147,20 +181,22 @@ python.minesweeper.color_mine_bg = "color for mine (background) (default: "97")"
 python.minesweeper.color_square_bg = "color for square (background) (default: "239")"
 python.minesweeper.utf8 = "use utf-8 chars to draw grid and flags (your terminal/font must support these chars) (default: "on")"
 python.minesweeper.zoom = "zoom for board: 0 or 1 (size of squares: 0 = 4x2, 1 = 6x3 (better), empty means automatic zoom according to size of window) (default: "")"
-python.notify_send.ellipsis = "Ellipsis to be used for notifications that are too long."
-python.notify_send.escape_html = "Escapes the '<', '>', and '&' characters in notification messages."
-python.notify_send.icon = "Path to an icon to be shown in notifications."
-python.notify_send.ignore_nicks = "A comma-separated list of nicks from which no notifications should be shown."
-python.notify_send.ignore_nicks_starting_with = "A comma-separated list of nick prefixes from which no notifications should be shown."
-python.notify_send.max_length = "Maximal length of a notification (0 means no limit)."
-python.notify_send.min_notification_delay = "A minimal delay between successive notifications from the same buffer (in milliseconds; set to 0 to show all notifications)."
-python.notify_send.nick_separator = "A separator between a nick and a message."
-python.notify_send.notify_for_current_buffer = "Send also notifications for the currently active buffer."
-python.notify_send.notify_on_highlights = "Send notifications on highlights."
-python.notify_send.notify_on_privmsgs = "Send notifications on private messages."
-python.notify_send.notify_when_away = "Send also notifications when away."
-python.notify_send.timeout = "Time after which the notification disappears (in milliseconds; set to 0 to disable)."
-python.notify_send.urgency = "Urgency (low, normal, critical)."
+python.notify_send.ellipsis = "Ellipsis to be used for notifications that are too long. Default: [..]."
+python.notify_send.escape_html = "Escapes the '<', '>', and '&' characters in notification messages. Default: on."
+python.notify_send.icon = "Path to an icon to be shown in notifications. Default: /usr/share/icons/hicolor/32x32/apps/weechat.png."
+python.notify_send.ignore_buffers = "A comma-separated list of buffers from which no notifications should be shown. Default: ""."
+python.notify_send.ignore_buffers_starting_with = "A comma-separated list of buffer prefixes from which no notifications should be shown. Default: ""."
+python.notify_send.ignore_nicks = "A comma-separated list of nicks from which no notifications should be shown. Default: ""."
+python.notify_send.ignore_nicks_starting_with = "A comma-separated list of nick prefixes from which no notifications should be shown. Default: ""."
+python.notify_send.max_length = "Maximal length of a notification (0 means no limit). Default: 72."
+python.notify_send.min_notification_delay = "A minimal delay between successive notifications from the same buffer (in milliseconds; set to 0 to show all notifications). Default: 500."
+python.notify_send.nick_separator = "A separator between a nick and a message. Default: : ."
+python.notify_send.notify_for_current_buffer = "Send also notifications for the currently active buffer. Default: on."
+python.notify_send.notify_on_highlights = "Send notifications on highlights. Default: on."
+python.notify_send.notify_on_privmsgs = "Send notifications on private messages. Default: on."
+python.notify_send.notify_when_away = "Send also notifications when away. Default: on."
+python.notify_send.timeout = "Time after which the notification disappears (in milliseconds; set to 0 to disable). Default: 5000."
+python.notify_send.urgency = "Urgency (low, normal, critical). Default: normal."
 python.urlserver.buffer_short_name = "use buffer short name on dedicated buffer (default: "off")"
 python.urlserver.color = "color for urls displayed after message (default: "darkgray")"
 python.urlserver.color_in_msg = "color for urls displayed inside irc message: it is a number (irc color) between 00 and 15 (see doc for a list of irc colors) (default: "")"
