--- a/weechat/.config/weechat/weechat.conf
+++ b/weechat/.config/weechat/weechat.conf
@@ -323,6 +323,9 @@ title.type = window
 
 [filter]
 irc_smart = on;*,!*&bitlbee*;irc_smart_filter;*
+hidemodes = on;irc.bitlbee.&bitlbee;irc_mode;*
+hidequit = on;irc.bitlbee.&bitlbee;irc_quit;*
+hidejoin = on;irc.bitlbee.&bitlbee;irc_join;*
 
 [key]
 ctrl-? = "/input delete_previous_char"
