mpv: Don't use some video formats that don't work

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,3 +1,4 @@
 cache-default=3000000
 cache-secs=3600
 sub-auto=fuzzy
+ytdl-format=bestvideo[height<=?1080][protocol!=http_dash_segments]+bestaudio/best
